testsuite/tests/properties/invalid_node_builder/bad_build_type/test.lkt
from common import BaseExample, FooNode, Literal

@synthetic class EmptyNode: FooNode {
}

class DerivedNode: EmptyNode {
}

class Example: BaseExample {
    @lazy prop: DerivedNode = EmptyNode.builder().build()
}
